learn-k8s/day-5/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codestar-svc-adminer-main
spec:
  selector:
    app: adminer
  type: ClusterIP
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
