learn-k8s/day-5/Ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "test.localdev.me"
    http:
      paths:
      - path: /path1
        pathType: Prefix
        backend:
          service:
            name: codestar-svc-adminer-main
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: codestar-deployment
            port:
              number: 80
